@@ -24,6 +24,9 @@
 	(PokerTableTestCase.test08_5_kick): Added use of fakeGameRemovePlayer.
 	(PokerTableTestCase.test08_player_has_trouble_joining): Added test
 	for player5 joining table 2.
+	(MockClientBot): Created class.
+	(MockClientBot.getName): Created function.
+	(PokerTableTestCase.createBot): Wrote function.
 
 2008-01-26  Bradley M. Kuhn  <bkuhn@ebb.org>
 
